# python-project-template

./: README.md  dockerfile  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  run.bat  setup.py  ty.toml
scripts/: main.py
src/: app.py  main.ipynb  main.py
src/project_name/: __init__.py  module.py  module1.py
test/: test_module.py
tests/: test_module1.py
tools/: lint.sh  test.sh  virtualenv.sh
